// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: encryption form 1`] = `
<div
  className="page page-limited"
  id="encryption-page"
>
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="property.category.security.encryption"
  />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      property.category.security.encryption
    </h1>
    <DeferredSpinner
      loading={false}
    />
  </header>
  <EncryptionForm
    generateSecretKey={[Function]}
  />
</div>
`;

exports[`should render correctly: generate form 1`] = `
<div
  className="page page-limited"
  id="encryption-page"
>
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="property.category.security.encryption"
  />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      property.category.security.encryption
    </h1>
    <DeferredSpinner
      loading={false}
    />
  </header>
  <GenerateSecretKeyForm
    generateSecretKey={[Function]}
  />
</div>
`;

exports[`should render correctly: loading 1`] = `
<div
  className="page page-limited"
  id="encryption-page"
>
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="property.category.security.encryption"
  />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      property.category.security.encryption
    </h1>
    <DeferredSpinner
      loading={true}
    />
  </header>
</div>
`;
